pkg/plugins/policies/meshhttproute/plugin/v1alpha1/testdata/gateway-meshexternalservice.routes.golden.yaml
resources:
- name: sample-gateway:HTTP:8080:*
  resource:
    '@type': type.googleapis.com/envoy.config.route.v3.RouteConfiguration
    ignorePortInHostMatching: true
    name: sample-gateway:HTTP:8080:*
    requestHeadersToRemove:
    - x-kuma-tags
    validateClusters: false
    virtualHosts:
    - domains:
      - '*'
      name: '*'
      routes:
      - match:
          path: /external
        name: z3UA6bBdochDk439G0ZMA+OTdJbkinz5R7Zo/LQ5ASA=
      - match:
          prefix: /external/
        name: z3UA6bBdochDk439G0ZMA+OTdJbkinz5R7Zo/LQ5ASA=
